# eden

./: .gitignore  CMakeLists.txt  README  make_plugin.sh
plugins/: test.cpp
pluginsrc/: test.cpp
src/: main.cpp  module.h  plugin.h
